--- a/TODO
+++ b/TODO
@@ -1,7 +1,15 @@
 xlCluster_go/TODO
 
+2014-11-19
+    * FIX: Cluster.Strings() loops len(tc.clMembers) times, but 
+        doesn't verify that this is the same as curSize
+    * rename TestCluster Cluster                                        * DONE
+    * differentiate curSize and maxSize of cluster                      * DONE
+
 2014-11-17
     * Flesh out README.md and ghpDoc/index.md
     * need testCluster_test.go
-    * need cluster.go
-        - and cluster_test.go ?
+    * need cluster.go for Cluster
+        - and cluster_test.go 
+        - possibly LocalHostCluster
+        - possibly VMCluster
