--- a/TODO
+++ b/TODO
@@ -5,11 +5,12 @@ xlCluster_go/TODO
         doesn't verify that this is the same as curSize
     * rename TestCluster Cluster                                        * DONE
     * differentiate curSize and maxSize of cluster                      * DONE
+    * rename ClusterMember.Size ClusterMember.MaxSize                   * DONE
 
 2014-11-17
     * Flesh out README.md and ghpDoc/index.md
-    * need testCluster_test.go
-    * need cluster.go for Cluster
+    * need testCluster_test.go                                          * No...
+    * need cluster.go for Cluster                                       * DONE
         - and cluster_test.go 
         - possibly LocalHostCluster
         - possibly VMCluster
