--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,9 @@ xlCluster_go/CHANGES
 The version number and date in this file must be kept in sync with version.go
 -----------------------------------------------------------------------------
 
+v1.8.1
+    2014-11-26
+        * added pktComms/ from paxos_go                             SLOC 2196
 v1.8.0
     2014-11-24
         * LocalHostCluster.Run/Close() become Start/Stop()
