--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,9 @@ xlCluster_go/CHANGES
 The version number and date in this file must be kept in sync with version.go
 -----------------------------------------------------------------------------
 
+v1.8.2
+    2015-04-25
+        * pktComms tests succeed                                    SLOC 1580
 v1.8.1
     2014-12-02
         * change Node.Run()/Close() to OpenAcc()/CloseAcc()         SLOC 2196
