--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,12 @@ xlCluster_go/CHANGES
 The version number and date in this file must be kept in sync with version.go
 -----------------------------------------------------------------------------
 
+v1.8.4
+    2015-04-29
+        * makeSimpleCluster
+v1.8.3
+    2015-04-28
+        * cleanup, respec                                           SLOC 1579
 v1.8.2
     2015-04-25
         * pktComms tests succeed                                    SLOC 1580
