--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
 xlCluster_go/TODO
 
+2015-04-28
+    * Cluster field names should start with lower case                  * DONE
+    * there should be a getter for each such field                      * DONE
 2015-04-25
     * review xlReg_go/bootstrap.go to determine whather any of its
         functionality belongs in this package
