--- a/CHANGES
+++ b/CHANGES
@@ -3,9 +3,12 @@ xlCluster_go/CHANGES
 The version number and date in this file must be kept in sync with version.go
 -----------------------------------------------------------------------------
 
+v1.8.5
+    2015-04-30
+        * lib_test: create K MemberInfo and K ClusterMembers        SLOC 1554
 v1.8.4
     2015-04-29
-        * makeSimpleCluster
+        * in lib_test: makeSimpleCluster; make K nodes              SLOC 1529
 v1.8.3
     2015-04-28
         * cleanup, respec                                           SLOC 1579
