--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,9 @@ xlCluster_go/CHANGES
 The version number and date in this file must be kept in sync with version.go
 -----------------------------------------------------------------------------
 
+v1.9.9
+    2016-06-03
+        * add bkp2U, other bash scripts; update .dvcz               SLOC 1809
 v1.9.8
     2016-02-26
         * update LICENSE                                            SLOC 1614
@@ -57,6 +60,7 @@ v1.7.1
 v1.7.0
     2014-11-17
         * split from xlReg_go v1.6.4                                SLOC 
+
 
 
 
