--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,9 @@ xlCluster_go/CHANGES
 The version number and date in this file must be kept in sync with version.go
 -----------------------------------------------------------------------------
 
+v1.9.11
+    2016-09-21
+        * standardize licensing                                     SLOC 2359
 v1.9.10
     2016-07-01
         * add ghpDoc/{css,img}                                      SLOC 2326
@@ -63,6 +66,7 @@ v1.7.1
 v1.7.0
     2014-11-17
         * split from xlReg_go v1.6.4                                SLOC 
+
 
 
 
