--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,9 @@ xlCluster_go/CHANGES
 The version number and date in this file must be kept in sync with version.go
 -----------------------------------------------------------------------------
 
+v1.9.13
+    2017-11-21
+        * correct directory structure, config files                 SLOC 2368
 v1.9.12
     2017-10-22
         * add projConfig.toml                                       SLOC 2365
@@ -69,6 +72,7 @@ v1.7.1
 v1.7.0
     2014-11-17
         * split from xlReg_go v1.6.4                                SLOC 
+
 
 
 
